# Agent-Eval

./: .env.example  .gitignore  Plan.md  README.md  main.py  mcp_client.py  mcp_tools.py  models.py  pyproject.toml  runner.py
.github/workflows/: eval.yml
config/: mcp-gateway-policy.yaml  mcp-gateway.env.example
evaluators/: __init__.py  base.py  custom.py  llm_judge.py  regex_eval.py  substring.py  tool_sequence.py
scripts/: mcp-down.sh  mcp-up.sh  pre-commit
tasks/: example.yaml  mcp_example.yaml  mcp_public.yaml
tests/: test_cli_mcp_url.py  test_mcp_auth.py  test_mcp_tools.py  test_mcp_url.py  test_suite_yaml.py
