[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-eval"
version = "0.1.0"
description = "CI/CD-style evaluation framework for AI agents using Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pandas>=2.2.0",
]

[project.scripts]
agent-eval = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
