[project]
name = "agent-eval"
version = "0.1.0"
description = "CI/CD-style evaluation framework for AI agents using Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "mcp>=1.9",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
agent-eval = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "runner.py", "models.py", "mcp_client.py", "evaluators"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pandas>=2.2.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
